Replace com.amazonaws.services.cloudformation - pass1